# ref4ep-portal

./: .gitignore  README.md
backend/: .env.example  README.md  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_baseline.py  0002_identity_and_project.py  0003_documents.py  0004_audit_and_release.py  0005_document_description.py  0006_partner_extended_fields.py  0007_partner_contacts.py  0008_partner_organization_fields.py  0009_workpackage_status_and_milestones.py  0010_meetings.py  0011_test_campaigns.py  0012_document_comments.py  0013_workpackage_schedule.py  0014_seed_workpackage_schedule.py  0015_test_campaign_photos.py  0016_test_campaign_notes.py  0017_test_campaign_photo_thumbnails.py  0018_project_library.py  0019_document_type_paper.py  0020_document_types_science.py  0021_milestone_document_links.py  0022_partner_roles.py  0023_library_section_themes.py  0024_test_campaign_attachments.py  0025_meeting_recurrence.py
backend/src/ref4ep/: __init__.py
backend/tests/: conftest.py  test_alembic_roundtrip.py  test_cli.py  test_frontend_assets.py  test_health.py  test_migrations.py  test_public_pages.py  test_settings_backup_trigger.py  test_spa_shell.py
backend/tests/api/: test_actions_api.py  test_activity_api.py  test_admin_backup_api.py  test_admin_memberships.py  test_admin_partner_roles.py  test_admin_partners.py  test_admin_persons.py  test_admin_system_status_api.py  test_audit.py  test_auth_login.py  test_auth_logout.py  test_auth_password.py  test_calendar_api.py  test_campaign_attachments_api.py  test_csrf.py  (+29 more)
(+162 files in other folders)
